--- a/conf/odoo.conf
+++ b/conf/odoo.conf
@@ -5,4 +5,5 @@ db_host = localhost
 db_port = 5432
 db_user = odoo15
 db_password = mohamed1999
+debug=True
 addons_path = C:/myapps/odoo15/odoo/addons,C:/myapps/odoo15/odoo/custom_addons
